[package]
name = "chore"
version = "0.1.0"
authors = ["Daniel Thau <danthau@gmail.com>"]
edition = "2018"
description = "plain-text command-line task management utility"
license = "MIT"
homepage = "https://github.com/paradigm/chore/"
repository = "https://github.com/paradigm/chore/"
readme = "README.md"
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4"
lazy_static = "1.4.0"
libc = "0.2"
regex = "1"
