[package]
name = "chore"
version = "0.1.0"
authors = ["Daniel Thau <danthau@gmail.com>"]
edition = "2018"
description = "plain-text command-line task management utility"
license = "MIT"
homepage = "https://github.com/paradigm/chore/"
repository = "https://github.com/paradigm/chore/"
readme = "README.md"
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4"
lazy_static = "1.4.0"
libc = "0.2"
regex = "1"

[package.metadata.deb]
section = "utils"
assets = [
  ["target/release/chore", "usr/bin/chore", "755"],
  ["third-party-tooling-support/vim/ftdetect/chore.vim", "usr/share/vim/addons/ftdetect/chore.vim", "644"],
  ["third-party-tooling-support/vim/syntax/chore.vim", "usr/share/vim/addons/syntax/chore.vim", "644"],
  ["third-party-tooling-support/zsh/_chore", "usr/share/zsh/vendor-completions/_chore", "644"],
]
